# terminal-scroll

./: .markdownlint.yaml  README.md  data.py  main.py  notes.md  pyproject.toml
components/: elements.py  messages.py  screens.py
llm/: agent.py  backstories.py  characters.py  environments.py  intro.py  items.py  llm_agent.py
