[project]
name = "terminal-scroll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.27",
  "langgraph>=0.6.7",
  "openai>=1.108.1",
  "pydantic>=2.11.9",
  "prompt-toolkit",
  "questionary",
  "textual",
  "langchain-openai>=0.3.34",
]
